fix: video-display scrollbar for touches

--- a/src/components/VideoDisplay/VideoDisplayHeader/VideoDisplayHeader.scss
+++ b/src/components/VideoDisplay/VideoDisplayHeader/VideoDisplayHeader.scss
@@ -1,8 +1,8 @@
 .video-display-header {
-  @apply flex items-center gap-2.5;
+  @apply flex items-center flex-wrap gap-2.5;
 
   &__username, &__title {
-    @apply font-jost;
+    @apply font-jost whitespace-nowrap;
   }
 
   &__dot {
